# n8x-like-n8n

./: .env.example  README.md  pyproject.toml  requirements.txt
data/: diet_shopping_runs.csv
src/flow_chest/: __init__.py  actions.py  engine.py  main.py  models.py
src/flow_chest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flow_chest/static/: index.html
workflows/: diet-shopping-email.json  welcome.json
